--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
 	"compilerOptions": {
 		"module": "commonjs",
 		"target": "es5",
-		"sourceMap": true
+		"sourceMap": true,
+		"lib": [
+			"es2019",
+			"DOM"
+		],
 	},
 	"exclude": [
 		"node_modules"
