--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,11 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es5",
-		"sourceMap": true,
-		"lib": [
-			"es2019",
-			"DOM"
-		],
-	},
-	"exclude": [
-		"node_modules"
-	]
+  "compilerOptions": {
+    "noImplicitAny": true,
+    "jsx": "react",
+    "module": "commonjs",
+    "target": "es6",
+    "sourceMap": true,
+    "lib": ["es2019", "DOM"]
+  },
+  "exclude": ["node_modules"]
 }
