--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
+    "strictNullChecks": true,
     "noImplicitAny": true,
     "jsx": "react",
     "module": "commonjs",
     "target": "es6",
     "sourceMap": true,
-    "lib": ["es2019", "DOM"]
+    "lib": [
+      "es2019",
+      "DOM"
+    ]
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
