--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ quicksilver = {version="0.4.0-alpha0.5", features=["stdweb"]}
 mergui = "0.1.0-alpha0.5"
 serde={version="1",features=["derive"]}
 serde_json="1"
+futures="0.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 stdweb = "*"
