--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ mergui = "0.1.0-alpha0.5"
 serde={version="1",features=["derive"]}
 serde_json="1"
 futures="0.3"
+schemafy = "0.5"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 stdweb = "*"
