--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "js/index.js",
   "private": true,
   "scripts": {
-    "build": "./node_modules/.bin/webpack-cli --output-path ./build"
+    "build": "./node_modules/.bin/webpack-cli --output-path ./build",
+    "create-type" : "./node_modules/.bin/json2ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "json-schema-to-typescript": "^9.1.1"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
