--- a/event_types/Cargo.toml
+++ b/event_types/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quicksilver = {git="https://github.com/ryanisaacg/quicksilver", features=["stdweb","serde"]}
+quicksilver = {version="0.4.0-alpha0.5"}
 schemars = "0.8.0-alpha-4"
 serde = {version="1", features=["derive"]}
