--- a/editor/tsconfig.json
+++ b/editor/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "lib": [
       "es2019",
-      "DOM"
+      "DOM",
+      "dom.iterable",
     ]
   },
   "exclude": [
