--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get -qq update
           sudo apt-get install -y libudev-dev zlib1g-dev alsa libasound2-dev
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
       # I don't need to rune the js commands, however I like being able to see how long it took
       - name: install js dependencies
         run: yarn install
