--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -37,10 +37,11 @@ jobs:
         working-directory: ./editor
       - name: Make ready for deploy
         run: |
-          mkdir ./preps
-          cp -a ./static/. ./preps/
-          cp -a ./target/wasm32-unknown-unknown/release/examples/. ./preps/
-        working-directory: ./editor
+          ls ./editor
+          ls
+          mkdir ./editor/preps
+          cp -a ./editor/static/. ./preps/
+          cp -a ./editor/target/wasm32-unknown-unknown/release/examples/. ./preps/
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
