--- a/event_types/Cargo.toml
+++ b/event_types/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 quicksilver = {version="0.4.0-alpha0.5"}
 schemars = "0.8.0-alpha-4"
 serde = {version="1", features=["derive"]}
+serde_json = "1"
