fix autodeploy not running on build.rs changes

--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - "*/build.rs"
       - "*/src/**.rs"
       - "editor/js/**.ts"
       - "editor/js/**.tsx"
