WIP: Update context to understand new event system.
Notes:
 It is not yet tested
The current editor does not understand the new system yet

--- a/build_in_event_types/Cargo.toml
+++ b/build_in_event_types/Cargo.toml
@@ -12,3 +12,4 @@ schemars = "0.8.0-alpha-4"
 serde = {version="1", features=["derive"]}
 serde_json = "1"
 async-trait = "0.1.36"
+plugin_api =  {path="../plugin_api"}
