--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -13,6 +13,7 @@ serde={version="1",features=["derive"]}
 serde_json="1"
 futures="0.3"
 build_in_event_types = {path="../build_in_event_types"}
+plugin_api = {path="../plugin_api"}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 stdweb = "*"
